# fedxai-lib

./: .gitignore  Algorithm_Hyperparameters.md  DOCKER.md  Dockerfile.fedxai  Dockerfile.fedxai_frbc  Dockerfile.fedxai_lib  Dockerfile.fedxai_lib_dev  Dockerfile.requester  Illustrative_Example.md  README.md  README_codex.md  USAGE.md  docker-compose-clients.yml  docker-compose-clients_frbc.yml  docker-compose-director.yml  docker-compose-requester.yml  docker-compose.yml  pyproject.toml
datasets/: xclara.csv
datasets/RMI_demo/preprocessed/: split_train_0.csv  split_train_1.csv  split_train_2.csv  test.csv  train.csv
models/: frbc_RMI.pickle
src/fedxai_lib/: __init__.py
src/fedxai_lib/algorithms/: __init__.py
src/fedxai_lib/algorithms/federated_cmeans_horizontal/: __init__.py  client.py  server.py
src/fedxai_lib/algorithms/federated_cmeans_vertical/: __init__.py  client.py  server.py
src/fedxai_lib/algorithms/federated_fcmeans_horizontal/: __init__.py  client.py  server.py
src/fedxai_lib/descriptors/: plan_loader.py
src/plans/: plan_federated_cmeans_horizontal_xclara.json  plan_federated_cmeans_vertical_xclara.json  plan_federated_fcmeans_horizontal_xclara.json  plan_federated_fcmeans_vertical_xclara.json  plan_federated_frt_weather_izimir.json
src/scripts/: run_federation.erl  run_federation.sh
src/scripts/executions/: federated_frbc_rmi_demo.json
src/scripts/experiments/: plan_federated_frbc_RMI_demo.json  plan_federated_frt_weather_izimir.json
src/tests/: test_fed_cmeans_horizontal_xclara.py  test_fed_cmeans_vertical_xclara.py  test_fed_fcmeans_horizontal_xclara.py  test_fed_fcmeans_vertical_xclara.py  test_fed_frt_weather_izimir.py  test_fed_horizontal_cmeans_xclara.py  test_fed_horizontal_fcmeans_xclara.py  test_fed_rbc_rmi_demo_fedxai_lib.py  test_fed_shap_rmi.py  test_fed_vertical_cmeans_xclara.py  test_fed_vertical_fcmeans_xclara.py  test_frbc_RMI_DEMO.py  test_frbc_RMI_DEMO_fedxai_lib.py
(+30 files in other folders)
