[project]
name = "fedxai-lib"
version = "1.0.1"
authors = [
  { name="AI research team", email="ai-team@unipi.it" },
]
description = "A library of Fed-XAI algorithms"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[tool.poetry]
packages = [
    {include = "fedxai_lib", from = "src"}
]
include = [
    "src/fedxai_lib/descriptors/definitions/*.json",
    "src/fedxai_lib/descriptors/definitions/**/*.json"
]

[tool.poetry.dependencies]
pandas = "^2.3.3"
numpy = "^2.3.4"
numba = "^0.62.1"
fedlang-py = "0.0.1"
scikit-learn = "^1.7.2"
simpful = "^2.12.0"
shap = "^0.46.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = "==1.9.0"

[project.urls]
Homepage = "https://github.com/jlcorcuera/fedxai-lib"
Issues = "https://github.com/jlcorcuera/fedxai-lib/issues"